<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ru.slybeaver.githubclient.view.SplashScreenActivity"
        android:id="@+id/SplashScreenRelativeLayout">

    <TextView
            android:text="@string/brief_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorLightText"
            android:id="@+id/textBrief"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:typeface="monospace"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/imageRadialPreloader"
            android:src="@drawable/main_preloader"
            android:layout_centerInParent="true"
            android:contentDescription="@string/splash_screen_preloader"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="main_logo"
            android:id="@+id/imageLogo"
            android:src="@drawable/logo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/splash_screen_logo"/>

</RelativeLayout>
