<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.slybeaver.githubclient.view.RepositoriesActivity"
        android:id="@+id/reposCoordinatorLayout">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:id="@+id/appBar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    >

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimaryDark"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
        >

            <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:background="@color/colorPrimaryDark"
                    tools:context=".activities.repolist.RepositoriesActivity">
                <ImageView
                        android:id="@+id/ivBackgr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/main_backgr"
                        app:layout_collapseMode="parallax"
                        android:contentDescription="@string/background"/>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:transitionName="main_logo"
                        android:src="@drawable/logo_actionbar"
                        android:scaleType="matrix"
                        tools:targetApi="lollipop"
                        android:contentDescription="@string/logo"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/swipeRefreshLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:showIn="@layout/activity_repositories"
                tools:context=".activities.repolist.RepositoriesActivity">

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ReposRecyclerView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
            />

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/imageRadialPreloader"
                       android:src="@drawable/main_preloader"
                       android:contentDescription="@string/splash_screen_preloader"
                       android:layout_centerHorizontal="true"
                       android:layout_alignParentBottom="false"
                       android:layout_alignParentTop="true"
                       android:layout_marginTop="@dimen/logo_margin"
                       android:visibility="gone"/>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</android.support.design.widget.CoordinatorLayout>
